--- a/styles.css
+++ b/styles.css
@@ -84,7 +84,7 @@ ul {
 #dropdown span:after {
     top: -5px;
 }
-.checkbox {
+input {
     display: none;
 }
 input:checked ~ ul {
@@ -119,28 +119,56 @@ input:checked ~ #dropdown:not(.steps) span:before, input:checked ~ #dropdown:not
     }
     header {
         background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
+        padding: 20px 20px 15px 15px;
     }
     main {
         grid-template-columns: 1fr 1fr 1fr;
     }
-    nav {
+    nav ul{
         background-color: #030a8c;
         color:#ffffff
     }
-    nav :hover{
+    nav:hover{
         background-color: #590242;
     }
     #trending {
         grid-column-start: 1;
         grid-column-end: 4;
+        background-color: #ffffff;
+        color: #590242;
     }
+    dl {
+        display: flex;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: #590242;
+      }
+      
+      dt, dd {
+        display: flex;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        padding-right: 0px;
+      }
     #playlist{
         grid-column-start: 3;
         grid-column-end: 4;
+        background-color: #2699fb;
     }
     #curated {
         grid-column-start: 3;
         grid-column-end: 4;
+        background-color: #2104d9;
     }
+     /*Audio */
+  audio::-webkit-media-controls-mute-button {
+    background-color: #ffffff;
+    border-radius: 50%;
+  }
+  audio::-webkit-media-controls-play-button {
+  background-color: #ffffff;
+  border-radius: 50%;
+  }
+  audio::-webkit-media-controls-enclosure {
+   background-color: rgba(252, 245, 245, 0.5);
+  }
 
 }
