--- a/styles.css
+++ b/styles.css
@@ -106,13 +106,19 @@ html {
     background-color: #020659;
     max-width: 375px;
 }
+body {
+    margin: 0 auto;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
 header {
     background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
     padding: 20px 20px 15px 15px;
 }
 main {
     grid-template-columns: 1fr 1fr 1fr;
+    background-color: #ffffff;
 }
+
 nav ul{
     background-color: #030a8c;
     color:#ffffff
@@ -121,32 +127,40 @@ nav:hover{
     background-color: #590242;
 }
 #trending {
-    grid-column-start: 1;
+    grid-column-start: 2;
     grid-column-end: 4;
-    background-color: #ffffff;
+    /*background-color: #ffffff;*/
     color: #590242;
+    margin: 0 2px;
 }
 dl {
     display: flex;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: #590242;
   }
   
   dt, dd {
     display: flex;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     padding-right: 0px;
   }
 #playlist{
-    grid-column-start: 3;
-    grid-column-end: 4;
     background-color: #2699fb;
+    color:#ffffff
+}
+#playlists a {
+    grid-row-start: 1;
+    grid-row-end: 5;
+    background-color: #0D8Dfb;
 }
 #curated {
-    grid-column-start: 3;
-    grid-column-end: 4;
     background-color: #2104d9;
+    color:#ffffff
 }
+#curated a {
+    grid-row-start: 1;
+    grid-row-end: 5;
+    background-color:#020659;
+}
+ 
 
 @media screen and (min-width:834px) {
     ul {
@@ -190,13 +204,12 @@ dl {
     }
     dl {
         display: flex;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
         color: #590242;
       }
       
       dt, dd {
         display: flex;
-        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color:#590242;
         padding-right: 0px;
       }
     #playlist{
@@ -214,6 +227,7 @@ dl {
         float: left;
 
     }
+
      /*Audio */
   audio::-webkit-media-controls-mute-button {
     background-color: #ffffff;
