--- a/styles.css
+++ b/styles.css
@@ -115,20 +115,19 @@ header {
     padding: 20px 20px 15px 15px;
 }
 main {
-    grid-template-columns: 1fr 1fr 1fr;
+    background-color: #ffffff;
 }
 
 nav ul{
     background-color: #030a8c;
     color:#ffffff
 }
-nav:hover{
+nav a:hover{
     background-color: #590242;
 }
 #trending {
-    grid-column-start: 2;
-    grid-column-end: 4;
-    /*background-color: #ffffff;*/
+    grid-column-start: 3;
+    grid-column-end: 5;
     color: #590242;
     margin: 0 2px;
 }
@@ -139,6 +138,7 @@ dl {
   
   dt, dd {
     display: flex;
+    color: #590242;
     padding-right: 0px;
   }
 #playlist{
@@ -146,18 +146,20 @@ dl {
     color:#ffffff
 }
 #playlists .yp {
-    grid-row-start: 1;
+    grid-row-start: 3;
     grid-row-end: 5;
     background-color: #0D8Dfb;
+    margin: 1px;
 }
 #curated {
     background-color: #2104d9;
     color:#ffffff
 }
 #curated .cp {
-    grid-row-start: 1;
+    grid-row-start: 3;
     grid-row-end: 5;
     background-color:#020659;
+    margin: 1px;
 }
  
 
@@ -175,19 +177,23 @@ dl {
     html {
         background-color: #020659;
     }
+    body {
+        margin: 0 auto;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
     header {
         background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
         padding: 20px 20px 15px 15px;
     }
     main {
-        grid-template-columns: 1fr 1fr 1fr;
+        background-color: #ffffff;
     }
     nav ul{
         background-color: #030a8c;
         color:#ffffff;
         margin-right: 5px;
     }
-    nav:hover{
+    nav a:hover{
         background-color: #590242;
     }
     nav h2 {
@@ -212,19 +218,27 @@ dl {
         padding-right: 0px;
       }
     #playlist{
-        grid-column-start: 3;
-        grid-column-end: 4;
         background-color: #2699fb;
         color:#ffffff;
         float: left;
     }
+    #playlists .yp {
+        grid-row-start: 1;
+        grid-row-end: 5;
+        background-color: #0D8Dfb;
+        margin: 0 0 1px 0;
+    }
     #curated {
-        grid-column-start: 3;
-        grid-column-end: 4;
         background-color: #2104d9;
         color:#ffffff;
         float: left;
 
+    }
+    #curated .cp {
+        grid-row-start: 1;
+        grid-row-end: 5;
+        background-color:#020659;
+        margin: 0 0 1px 0;
     }
 
      /*Audio */
