--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,9 @@ body {
 header {
     background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
     padding: 20px 20px 15px 15px;
+    width: auto;
+    top: 30px;
+    position: relative;
 }
 main {
     background-color: #ffffff;
@@ -120,7 +123,10 @@ main {
 
 nav ul{
     background-color: #030a8c;
-    color:#ffffff
+    color:#ffffff;
+    width:auto;
+    top:0;
+    position: absolute;
 }
 nav a:hover{
     background-color: #590242;
@@ -130,6 +136,10 @@ nav a:hover{
     grid-column-end: 5;
     color: #590242;
     margin: 0 2px;
+    float: inline-start;
+    overflow: hidden;
+    overflow: scroll;
+    /*display: flex;*/
 }
 dl {
     display: flex;
@@ -143,23 +153,27 @@ dl {
   }
 #playlist{
     background-color: #2699fb;
-    color:#ffffff
+    color:#590242;
 }
 #playlists .yp {
     grid-row-start: 3;
     grid-row-end: 5;
     background-color: #0D8Dfb;
-    margin: 1px;
+    color:#ffffff;
+    margin: 2px;
+    padding: 3px;
 }
 #curated {
     background-color: #2104d9;
-    color:#ffffff
+    color:#590242;  
 }
 #curated .cp {
     grid-row-start: 3;
     grid-row-end: 5;
     background-color:#020659;
-    margin: 1px;
+    color:#ffffff;
+    margin: 2px;
+    padding: 3px;
 }
  
 
@@ -184,6 +198,9 @@ dl {
     header {
         background-image: linear-gradient(to right, #2104d9,#030a8c,#020873,#020659);
         padding: 20px 20px 15px 15px;
+        width: auto;
+        top: 30px;
+        position: relative;
     }
     main {
         background-color: #ffffff;
@@ -192,6 +209,9 @@ dl {
         background-color: #030a8c;
         color:#ffffff;
         margin-right: 5px;
+        width:auto;
+        top:0;
+        position: absolute;
     }
     nav a:hover{
         background-color: #590242;
@@ -201,11 +221,15 @@ dl {
         display: none;
       }
     #trending {
-        grid-column-start: 1;
-        grid-column-end: 4;
-        background-color: #ffffff;
+        grid-column-start: 3;
+        grid-column-end: 5;
         color: #590242;
-        display: flex;
+        margin: 0 2px;
+        float: inline-start;
+        overflow: hidden;
+        overflow: scroll;
+        /*display: flex;*/
+
     }
     dl {
         display: flex;
@@ -219,18 +243,20 @@ dl {
       }
     #playlist{
         background-color: #2699fb;
-        color:#ffffff;
+        color:#590242;
         float: left;
     }
     #playlists .yp {
         grid-row-start: 1;
         grid-row-end: 5;
         background-color: #0D8Dfb;
+        color:#ffffff;
         margin: 0 0 1px 0;
+        padding: 3px;
     }
     #curated {
         background-color: #2104d9;
-        color:#ffffff;
+        color:#590242;
         float: left;
 
     }
@@ -238,7 +264,9 @@ dl {
         grid-row-start: 1;
         grid-row-end: 5;
         background-color:#020659;
+        color:#ffffff;
         margin: 0 0 1px 0;
+        padding: 3px;
     }
 
      /*Audio */
@@ -252,6 +280,40 @@ dl {
   }
   audio::-webkit-media-controls-enclosure {
    background-color: rgba(252, 245, 245, 0.5);
+  }
+  /* Scrollbar */
+  #trending ::-webkit-scrollbar {
+    width: 15px;
+  }
+  #trending ::-webkit-scrollbar-track { 
+    box-shadow: inset 0 0 15px #590242;
+  
+  }
+  #trending ::-webkit-scrollbar-thumb {
+    background: #590242;
+    border-radius: 5px;
+  
+  }
+  #trending ::-webkit-scrollbar-thumb:hover {
+    background: #020659;
+  
+  }
+  #playlists ::-webkit-scrollbar, #curated ::-webkit-scrollbar {
+    width: 15px;
+
+  }
+  #playlists ::-webkit-scrollbar-track, #curated ::-webkit-scrollbar-track  {
+    box-shadow: inset 0 0 15px #590242;
+  
+  }
+  #playlists ::-webkit-scrollbar-thumb, #curated ::-webkit-scrollbar-thumb {
+    background: #590242;
+    border-radius: 5px;
+  
+  }
+  #playlists ::-webkit-scrollbar-thumb:hover, #curated ::-webkit-scrollbar-thumb:hover {
+    background: #020659;
+  
   }
 
 }
