--- a/styles.css
+++ b/styles.css
@@ -102,6 +102,7 @@ input:checked ~ label span:after {
 input:checked ~ label:not(.steps) span:before, input:checked ~ #dropdown:not(.steps) span:after {
     top: 0;
 }
+/*HTML,Body,Header,Main,Text,Footer*/
 html {
     background-color: #020659;
 }
@@ -122,6 +123,7 @@ main {
     background-color: #ffffff;
 }
 
+/*Navigation*/
 nav ul{
     background-color: #030a8c;
     color:#ffffff;
@@ -133,26 +135,33 @@ nav ul{
 nav a:hover{
     background-color: #590242;
 }
+nav h2 {
+    visibility: hidden;
+    display: none;
+  }
+
+  /*Trending Playlist*/
 #trending {
     color: #590242;
     margin: 0px;
     display: flex;
     float: inline-start;
     align-self: center;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-
-
+    overflow-x: hidden;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 dl {
     display: flex;
     color: #590242;
   }
   
-  dt , dd {
+  dt,dd {
     display: flex;
     color: #590242;
     padding-right: 0px;
   }
+
+  /*Your Playlist*/
 #playlists {
     background-color: #2699fb;
     float: left;
@@ -160,7 +169,7 @@ dl {
 #playlists h2{
     color: #590242;
 }
-#playlists h3 + p {
+#playlists h3,p {
     color: #ffffff;
 }
 #playlists .yp {
@@ -169,6 +178,8 @@ dl {
     margin: 3px;
     padding: -4px;
 }
+
+/*Curated Playlist*/
 #curated {
     background-color: #2104d9;
     float: left;
@@ -176,7 +187,7 @@ dl {
 #curated h2 {
     color:#590242
 }
-#curated h3 + p {
+#curated h3,p {
     color: #ffffff;
 }
 #curated .cp {
@@ -185,6 +196,7 @@ dl {
     margin: 3px;
     padding: -4px;
 }
+
   /*Audio */
   audio::-webkit-media-controls-mute-button {
     background-color: #ffffff;
@@ -197,6 +209,7 @@ dl {
   audio::-webkit-media-controls-enclosure {
    background-color: rgba(252, 245, 245, 0.5);
   }
+
   /* Scrollbar */
   #trending ::-webkit-scrollbar {
     width: 15px;
@@ -232,6 +245,14 @@ dl {
   
   }
 
+  /*Scroll*/
+  .scroll, .scroll1, .scroll2 {
+    grid-template-columns: repeat(5, 1fr);
+    overflow: scroll;
+    overflow-y: hidden;
+    position: relative;
+  }
+
 
 @media screen and (min-width:834px) {
     ul {
@@ -239,12 +260,12 @@ dl {
         position: absolute;
         top: 0;
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+        grid-template-columns: 1fr;
     }
     #dropdown span, input {
         display: none;
     }
-    /*html {
+    html {
         background-color: #020659;
     }
     body {
@@ -260,6 +281,7 @@ dl {
     }
     main {
         background-color: #ffffff;
+        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     }
     nav ul{
         background-color: #030a8c;
@@ -277,19 +299,34 @@ dl {
         visibility: hidden;
         display: none;
       }
+      #trending {
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+      #playlists {
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+      #curated {
+        grid-column-start: 1;
+        grid-column-end: 3;
+      }
+      /*
     #trending {
         color: #590242;
         margin: 2px;
         display: flex;
         float: inline-start;
         align-self: center; 
+        overflow-x: hidden;
+        grid-template-columns: 1fr 1fr 1fr;
     }
     dl {
         display: flex;
         color: #590242;
       }
     
-      dt + dd {
+      dt,dd {
         display: flex;
         color:#590242;
         padding-right: 0px;
@@ -302,7 +339,7 @@ dl {
     #playlists h2 {
         color: #590242;
     }
-    #playlists h3 + p {
+    #playlists h3,p {
         color: #ffffff;
     }
     #playlists .yp {
@@ -318,7 +355,7 @@ dl {
     #curated h2 {
         color: #590242;
     }
-    #curated h3 + p {
+    #curated h3,p {
         color: #ffffff;
     }
     #curated .cp {
