--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,7 @@ nav {
     color:#ffffff;
     width: 100%;
     top: 0;
+    padding: 5px 5px 5px 5px;
     margin-right: 5px;
 }
 nav a:hover{
@@ -314,6 +315,7 @@ dl {
         color:#ffffff;
         width: 100%;
         top: 0;
+        padding: 5px 5px 5px 5px;
         margin-right: 5px;
     }
     nav a:hover{
